--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="u-repeater u-repeater-1">
                         <div class="u-align-left u-container-style u-list-item u-radius-20 u-repeater-item u-shape-round u-white u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500">
                             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                                <img class="u-expanded-width u-image u-image-round u-radius-10 u-image-1" src="images/_5933aff7-165c-47d5-95e8-586b809734a6.jpeg" alt="" data-image-width="1024" data-image-height="1024" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+                                <img class="u-expanded-width u-image u-image-round u-radius-10 u-image-1" src="images/tariftravel.jpeg" alt="" data-image-width="1024" data-image-height="1024" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                                 <h4 class="u-text u-text-palette-2-base u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Tarif travel</h4>
                                 <ul class="u-text u-text-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                                     <li>Shutle Rp. 200.000</li>
