--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="u-align-left u-container-style u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500">
                             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
-                                <img class="u-expanded-width u-image u-image-round u-radius-10 u-image-3" src="images/_4d33aefe-26d8-41ad-b13f-4d57d2199229.jpeg" alt="" data-image-width="1024" data-image-height="1024" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+                                <img class="u-expanded-width u-image u-image-round u-radius-10 u-image-3" src="images/rute.jpeg" alt="" data-image-width="1024" data-image-height="1024" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                                 <h4 class="u-text u-text-palette-2-base u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">rute </h4>
                                 <ul class="u-text u-text-8" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                                     <li>Palembang</li>
