--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="keywords" content="nomor travel palembang lampung, travel palembang lampung, tarif travel palembang lampung, jadwal travel palembang lampung, ">
-        <meta name="description" content="">
-        <title>Page 1</title>
+        <meta name="description" content="Mencari nomor travel Palembang Lampung yang murah dan terpercaya? Anda datang ke tempat yang tepat! Artikel ini akan membantu Anda menemukan travel terbaik untuk perjalanan Anda.">
+        <title>Travel Palembang Lampung</title>
         <link rel="stylesheet" href="nicepage.css" media="screen">
         <link rel="stylesheet" href="Page-1.css" media="screen">
         <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
