--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 "name": "Site2"
             }</script>
         <meta name="theme-color" content="#478ac9">
-        <meta property="og:title" content="Page 1">
+        <meta property="og:title" content="Travel Palembang - Lampung">
         <meta property="og:description" content="">
         <meta property="og:type" content="website">
         <meta data-intl-tel-input-cdn-path="intlTelInput/">
